--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,10 +45,14 @@
         android:layout_height="wrap_content"
         android:drawableStart="@drawable/switch_imapng"
         tools:layout_editor_absoluteX="15dp"
-        tools:layout_editor_absoluteY="17dp" />
+        tools:layout_editor_absoluteY="17dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"/>
 
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/containerBottom"
         android:layout_width="match_parent"
         android:layout_height="188dp"
         android:background="@drawable/bottom_options_bg"
@@ -56,6 +60,55 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" >
+
+
+    </LinearLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="92dp"
+        android:layout_height="33dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="@+id/bpm"
+        app:layout_constraintTop_toTopOf="@+id/bpm">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <ImageView
+        android:id="@+id/tom"
+        android:layout_width="110dp"
+        android:layout_height="51dp"
+        android:background="@drawable/bg_txtinput"
+        app:layout_constraintTop_toTopOf="@+id/containerBottom"
+        app:layout_constraintEnd_toEndOf="@+id/containerBottom"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="40dp"/>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="92dp"
+        android:layout_height="33dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="@+id/tom"
+        app:layout_constraintTop_toTopOf="@+id/tom">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <ImageView
+        android:id="@+id/bpm"
+        android:layout_width="110dp"
+        android:layout_height="51dp"
+        android:background="@drawable/bg_txtinput"
+        app:layout_constraintTop_toTopOf="@+id/containerBottom"
+        app:layout_constraintStart_toStartOf="@+id/containerBottom"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="40dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
