--- a/app/src/main/res/drawable/bg_txtinput.xml
+++ b/app/src/main/res/drawable/bg_txtinput.xml
@@ -2,9 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid android:color="#D9D9D9" />
-    <stroke android:width="9dp" android:color="#37354D"/>
+    <stroke android:width="9dp" android:color="#526596"/>
     <size android:width="110dp" android:height="51dp" />
     <corners android:radius="4dp" />
-
-
 </shape>
